--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
     "@aws-amplify/backend-cli": "^1.7.2",
+    "@aws-amplify/cli": "^13.0.1",
     "@eslint/js": "^9.25.0",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
