--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
