--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@aws-amplify/backend-cli": "^1.7.2",
     "@aws-amplify/cli": "^13.0.1",
     "@eslint/js": "^9.25.0",
-    "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
@@ -39,6 +38,7 @@
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
