--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
@@ -6,22 +6,23 @@ on:
       - main
       - staging
       - production
-
   pull_request:
     branches:
       - main
 
 jobs:
-  build_and_deploy:
-    name: Build, Test & Deploy Workflow
+  ci:
+    name: Code Quality & Build Validation
     runs-on: ubuntu-latest
 
     permissions:
       id-token: write
       contents: read
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -34,28 +35,44 @@ jobs:
       - name: Run ESLint
         run: npm run lint
 
-      - name: Configure AWS Credentials (Staging/Production)
+      - name: Build validation (PR/Main)
+        if: github.event_name == 'pull_request' || github.ref_name == 'main'
+        run: npm run build
+
+      - name: Cache Amplify Outputs
         if: github.event_name == 'push' && (github.ref_name == 'staging' || github.ref_name == 'production')
-        uses: aws-actions/configure-aws-credentials@v4.2.1
+        uses: actions/cache@v4
         with:
-          aws-access-key-id: ${{ secrets.USER_AWS_KEY }}
-          aws-secret-access-key: ${{ secrets.USER_AWS_SECRET }}
+          path: amplify_outputs.json
+          key: amplify-outputs-${{ github.ref_name }}-${{ hashFiles('amplify/**') }}
+          restore-keys: |
+            amplify-outputs-${{ github.ref_name }}-
+
+      - name: Configure AWS Credentials
+        if: github.event_name == 'push' && (github.ref_name == 'staging' || github.ref_name == 'production')
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ap-southeast-1
 
-      - name: Generate Amplify Outputs (Staging/Production)
+      - name: Generate Amplify Outputs
         if: github.event_name == 'push' && (github.ref_name == 'staging' || github.ref_name == 'production')
-        run: npx ampx generate outputs --branch ${{ github.ref_name }} --app-id d39qthns8fi2t1 --out-dir ./
+        run: |
+          if [ ! -f amplify_outputs.json ]; then
+            echo "Generating fresh Amplify outputs..."
+            npx ampx generate outputs --branch ${{ github.ref_name }} --app-id d39qthns8fi2t1 --out-dir ./
+          else
+            echo "Using cached Amplify outputs"
+          fi
 
-      - name: Build application (Staging/Production)
+      - name: Build for deployment
         if: github.event_name == 'push' && (github.ref_name == 'staging' || github.ref_name == 'production')
         run: npm run build
 
-      - name: Deploy to Staging
-        if: github.event_name == 'push' && github.ref_name == 'staging'
-        run: |
-          echo "Starting deployment to Staging..."
-
-      - name: Deploy to Production
-        if: github.event_name == 'push' && github.ref_name == 'production'
-        run: |
-          echo "Starting deployment to Production..."
+      - name: Upload build artifacts
+        if: github.event_name == 'push' && (github.ref_name == 'staging' || github.ref_name == 'production')
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-${{ github.ref_name }}
+          path: dist/
+          retention-days: 7
