--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,8 @@ jobs:
         if: github.event_name == 'push' && (github.ref_name == 'staging' || github.ref_name == 'production')
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-access-key-id: ${{ secrets.USER_AWS_KEY }}
+          aws-secret-access-key: ${{ secrets.USER_AWS_SECRET }}
           aws-region: ap-southeast-1
 
       - name: Generate Amplify Outputs
@@ -81,5 +82,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-${{ github.ref_name }}
-          path: dist/ # or your build output directory
+          path: dist/
           retention-days: 7
